@@ -12,7 +12,7 @@
         <setting id="providers.lang" type="select" label="32360" values="English|French|French+English|German|German+English|Greek|Greek+English|Korean|Korean+English|Polish|Polish+English|Russian|Russian+English|Spanish|Spanish+English" default="English" />
         <setting id="fanart" type="bool" label="32318" default="false" />
         <setting id="hidecinema" type="bool" label="32571" default="false" />
-        <setting id="trailer.select" type="enum" label="Trailers" lvalues="32334|32119" default="0" />
+        <setting id="trailer.select" type="enum" label="Trailers" lvalues="32334|32119|32120" default="2" />
         <setting type="lsep" label="32319" />
         <setting id="movie.widget" type="enum" label="32320" lvalues="32302|32321|32322|32323|32324|32580" default="1" />
         <setting id="lists.widget" type="enum" label="32329" lvalues="32302|32301" default="1" />
@@ -38,10 +38,11 @@
         <setting id="source.list.meta" type="bool" label="32112" default="false" enable="eq(-8,1)" />
         <setting type="lsep" label="32338" />
         <setting id="hosts.quality" type="enum" label="32339" values="4K|1080p|720p|SD" default="0" />
-        <setting id="autoplay.sd" type="bool" label="32620" default="false" />
-        <setting id="HEVC" type="bool" label="32363" default="true" />
-        <setting id="hosts.captcha" type="bool" label="32341" default="true" />
+        <setting id="remove.cam" type="bool" label="32122" default="false" />
         <setting id="debrid.only" type="bool" label="32621" default="false" />
+        <setting id="autoplay.sd" type="bool" label="32620" default="false" />
+        <setting id="remove.hevc" type="bool" label="32363" default="false" />
+        <setting id="remove.captcha" type="bool" label="32341" default="false" />
         <setting id="cf.disable" type="bool" label="32362" default="false" />
         <setting id="remove.dups" type="bool" label="32090" default="true" />
         <setting id="hosts.sort.provider" type="bool" label="32342" default="true" />
